@@ -1,5 +1,7 @@
 #!/bin/bash
 
+## Test mlocarna and locarnate
+
 cd Tests
 
 bin=bin
@@ -11,6 +13,7 @@ mkdir $bin
 topdir=../$srcdir/.. # top level directory of the locarna source
 
 cp -l $topdir/Utils/mlocarna $bin
+cp -l $topdir/Utils/locarnate $bin
 cp -l ../locarna.bin $bin/locarna
 cp -l ../locarna_p $bin
 cp -l ../sparse $bin
@@ -29,7 +32,10 @@ function calltest {
     fi
 }
 
-## run mlocarna
+## ========================================
+## test mlocarna
+##
+
 calltest $bin/mlocarna $topdir/Examples/archaea.fa --tgtdir test.out --alifold-cons -p 0.05 --max-diff 10
 rm -rf test.out
 
@@ -41,6 +47,18 @@ rm -rf test.out
 
 calltest $bin/mlocarna $topdir/Examples/archaea.fa --tgtdir test.out --probabilistic --consistency-transformation -p 0.05  --max-diff 10
 rm -rf test.out
+
+
+## ========================================
+## test locarnate (if t_coffee is available)
+##
+calltest $bin/locarnate $topdir/Examples/archaea.fa
+if [ -d "test_results" ] ; then
+    rm -rf test_results
+fi
+if [ -e "input.dnd" ] ; then
+    rm -f input.dnd
+fi
 
 ## cleanup
 rm -rf $bin
