@@ -1,5 +1,6 @@
 ============================================================
-=== 2015
+=== 2016
+	Fix locarnate (compatibility to current locarna); add unit test
 
 1.8.9   (2016-21-04)
 	improve configuration
@@ -14,6 +15,9 @@
 	otherwise use --enable-dynamic-binaries
 	fix & clean up code (after cppcheck static analysis)
 	prepare for rpm packaging
+
+============================================================
+=== 2015
 
 1.8.7	(2015-11-12)
 	prepare for Ubuntu packaging
